Fix invalid comment in build.xml
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1851797 13f79535-47bb-0310-9956-ffa450edef68